objects/AOPS_Account_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>CXTF370P_ACTION__c</fullName>
        <label>CXTF370P_ACTION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF370P_AOPS_KEY1__c</fullName>
        <label>CXTF370P AOPS KEY1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF370P_AOPS_KEY2__c</fullName>
        <label>CXTF370P AOPS KEY2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF370P_MSG_TYPE__c</fullName>
        <label>Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF370P_TIMESTAMP__c</fullName>
        <label>CXTF370P_TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_CREATE_DATE__c</fullName>
        <label>FCU370P_CREATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_CREATE_ID__c</fullName>
        <label>FCU370P_CREATE_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_CUSTOMER_ID__c</fullName>
        <label>FCU370P_CUSTOMER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_ENABLE_CNT_OPTIN__c</fullName>
        <label>FCU370P_ENABLE_CNT_OPTIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_FILLER1__c</fullName>
        <label>FCU370P_FILLER1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_FILLER2__c</fullName>
        <label>FCU370P_FILLER2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_FILLER3__c</fullName>
        <label>FCU370P_FILLER3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_UPDATE_DATE__c</fullName>
        <label>FCU370P_UPDATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_UPDATE_ID__c</fullName>
        <label>FCU370P_UPDATE_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU370P_VEHICLE_CODE__c</fullName>
        <label>FCU370P_VEHICLE_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <externalId>true</externalId>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Account Preferences</label>
    <nameField>
        <label>AOPS Account Preferences Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Account Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>